[metadata]
name = rocprof-sys-causal-viewer
url = https://github.com/ROCm/omnitrace
download_url = https://github.com/ROCm/omnitrace.git
maintainer = AMD Research
license = MIT
description = GUI for viewing Omnitrace causal profiles
keywords =
    gui
    causal profiling
    performance
    profiling
    sampling
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: C++
    Programming Language :: Python :: 3

[options]
packages = rocprof_sys_causal_viewer
zip_safe = true
include_package_data = true

[flake8]
ignore =
    E501,
    W503,
max-line-length = 90
